// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders the UI snapshot correctly 1`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="column"
>
  <legend>
    column
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="column-stack"
  >
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox2-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox2"
          name="column"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox2-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox3-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox3"
          name="column"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox3-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="column-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 2`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="row"
>
  <legend>
    row
  </legend>
  <div
    className="chakra-stack css-1478f2b"
    data-testid="checkbox-group"
    id="row-stack"
  >
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox2-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox2"
          name="row"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox2-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox3-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox3"
          name="row"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox3-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="row-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 3`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="noLabel"
>
  <legend>
    no label
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="noLabel-stack"
  >
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox2-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox2"
          name="noLabel"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox2-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox3-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox3"
          name="noLabel"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox3-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="noLabel-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 4`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="helperText"
>
  <legend>
    helperText
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="helperText-stack"
  >
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox2-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox2"
          name="helperText"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox2-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox3-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox3"
          name="helperText"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox3-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="helperText-helperErrorText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "helper text",
        }
      }
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 5`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="invalidText"
>
  <legend>
    invalidText
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="invalidText-stack"
  >
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox2-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox2"
          name="invalidText"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox2-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox3-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox3"
          name="invalidText"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox3-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="invalidText-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 6`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="noRequiredLabel"
>
  <legend>
    no optional or required label
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="noRequiredLabel-stack"
  >
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox2-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox2"
          name="noRequiredLabel"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={true}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox2-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox3-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox3"
          name="noRequiredLabel"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={true}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox3-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="noRequiredLabel-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 7`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="required"
>
  <legend>
    required
    <span>
       (required)
    </span>
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="required-stack"
  >
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox2-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox2"
          name="required"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={true}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox2-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox3-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox3"
          name="required"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={true}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox3-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="required-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 8`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="invalid"
>
  <legend>
    invalid
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="invalid-stack"
  >
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox2-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        data-invalid=""
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={true}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox2"
          name="invalid"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          data-invalid=""
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          data-invalid=""
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox2-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox3-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        data-invalid=""
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={true}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="checkbox3"
          name="invalid"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          data-invalid=""
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          data-invalid=""
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox3-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={true}
    data-testid="ds-helperErrorText"
    id="invalid-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 9`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="disabled"
>
  <legend>
    disabled
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="disabled-stack"
  >
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox2-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        data-disabled=""
        onClick={[Function]}
      >
        <input
          aria-disabled={true}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={true}
          id="checkbox2"
          name="disabled"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          data-disabled=""
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          data-disabled=""
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox2-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="checkbox3-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        data-disabled=""
        onClick={[Function]}
      >
        <input
          aria-disabled={true}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={true}
          id="checkbox3"
          name="disabled"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          data-disabled=""
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          data-disabled=""
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="checkbox3-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="disabled-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 10`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="ds-checkboxGroup"
  id="jsxLabels"
>
  <legend>
    jsxLabels
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="jsxLabels-stack"
  >
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="arts-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="arts"
          name="jsxLabels"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="arts"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          <div
            className="css-k008qs"
          >
            <span>
              Arts
            </span>
            <div
              className="css-17xejub"
            />
            <span>
              4
            </span>
          </div>
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="arts-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="English-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="English"
          name="jsxLabels"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="English"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          <div
            className="css-k008qs"
          >
            <span>
              English
            </span>
            <div
              className="css-17xejub"
            />
            <span>
              23
            </span>
          </div>
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="English-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="jsxLabels-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 11`] = `
<fieldset
  className="css-2bbtg1"
  data-testid="ds-checkboxGroup"
  id="chakraProps"
>
  <legend>
    chakraProps
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="chakraProps-stack"
  >
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="2-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="2"
          name="chakraProps"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="2-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="3-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="3"
          name="chakraProps"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="3-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="chakraProps-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;

exports[`Checkbox renders the UI snapshot correctly 12`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="props"
  id="otherProps"
>
  <legend>
    otherProps
  </legend>
  <div
    className="chakra-stack css-19s3t1h"
    data-testid="checkbox-group"
    id="otherProps-stack"
  >
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="2-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="2"
          name="otherProps"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="2"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 2
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="2-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
    <div
      className="css-1u8qly9"
      data-testid="ds-checkbox"
      id="3-componentWrapper"
    >
      <label
        className="chakra-checkbox css-0"
        onClick={[Function]}
      >
        <input
          aria-disabled={false}
          aria-invalid={false}
          checked={false}
          className="chakra-checkbox__input"
          disabled={false}
          id="3"
          name="otherProps"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          required={false}
          style={
            {
              "border": "0",
              "clip": "rect(0, 0, 0, 0)",
              "height": "1px",
              "margin": "-1px",
              "overflow": "hidden",
              "padding": "0",
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": "1px",
            }
          }
          type="checkbox"
          value="3"
        />
        <span
          aria-hidden={true}
          className="chakra-checkbox__control css-dnty2r"
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        />
        <span
          className="chakra-checkbox__label css-1oeb2oe"
          onMouseDown={[Function]}
        >
          Checkbox 3
        </span>
      </label>
      <div
        className="css-1xdhyk6"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
        id="3-helperErrorText"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
  </div>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="otherProps-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</fieldset>
`;
